# stm32h7-elderly-health-monitor

./: .gitignore  .mxproject  keil_cleaner.bat  stm32h7-elderly-health-monitor.ioc
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: adc.c  fmc.c  gpio.c  i2c.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
MDK-ARM/: startup_stm32h743xx.s  stm32h7-elderly-health-monitor.uvoptx  stm32h7-elderly-health-monitor.uvprojx
MDK-ARM/RTE/_stm32h7-elderly-health-monitor/: RTE_Components.h
MDK-ARM/stm32h7-elderly-health-monitor/: stm32h7-elderly-health-monitor.hex
User/: bsp_dwt.h  debug.c  debug.h  lcd.c  lcd.h
User/App/: app_alarm_notify.c  app_alarm_notify.h  app_config.h  app_display.c  app_display.h  app_lvgl.c  app_lvgl.h  app_main.c  app_main.h  app_max30102.c  app_max30102.h  app_peripheral.c  app_peripheral.h  app_radar_service.c  app_radar_service.h  app_rtc_alarm.c  app_rtc_alarm.h  app_sensor.c  app_sensor.h  app_sync_netdata.c  app_sync_netdata.h  app_system_monitor.c  app_system_monitor.h  app_voice_service.c  app_voice_service.h
User/BSP/: bsp_a7670c.c  bsp_a7670c.h  bsp_aht30.c  bsp_aht30.h  bsp_at24cxx.c  bsp_at24cxx.h  bsp_bh1750.c  bsp_bh1750.h  bsp_delay.c  bsp_delay.h  bsp_ds1302.c  bsp_ds1302.h  bsp_dwt.c  bsp_dwt.h  bsp_esp8266.c  bsp_esp8266.h  bsp_gt911.c  bsp_gt911.h  bsp_lcd.c  bsp_lcd.h  bsp_max30102.c  bsp_max30102.h  bsp_max30102_algorithm.c  bsp_max30102_algorithm.h  bsp_mq5.c  bsp_mq5.h  bsp_uart_comm.c  bsp_uart_comm.h  bsp_ws2812b.c  bsp_ws2812b.h
User/Devices/: aht30.c  aht30.h
User/Middlewares/FreeRTOS/: FreeRTOSConfig.h
User/Middlewares/LVGL/GUI/lvgl/: lv_conf.h
User/Middlewares/LVGL/GUI/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_indev_template.c
User/Middlewares/LVGL/GUI/lvgl/port/: lv_port_disp.c  lv_port_indev.c
User/Middlewares/LVGL/GUI_APP/demos/benchmark/: lv_demo_benchmark.c
User/Middlewares/LVGL/GUI_APP/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
User/Middlewares/LVGL/GUI_APP/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_uilabeltime.c  ui_comp_uilabeltime.h
User/Middlewares/LVGL/GUI_APP/ui/fonts/: ui_font_AlibabaPuHuiTi32.c  ui_font_AlibabaPuHuiTiMedium.c  ui_font_RobotoMonoBold14.c  ui_font_RobotoMonoBold16.c  ui_font_RobotoMonoBold26.c  ui_font_RobotoMonoBold26Ascii.c  ui_font_RobotoMonoBold40.c  ui_font_SourceHanSansBold12.c  ui_font_SourceHanSansBold16.c  ui_font_SourceHanSansBold26.c
User/Middlewares/LVGL/GUI_APP/ui/images/: ui_img_0_sunny_png.c  ui_img_alerts_active_page_png.c  ui_img_background_image_png.c  ui_img_brightness_png.c  ui_img_heart_rate_active_page_png.c  ui_img_heart_rate_png.c  ui_img_home_active_page_png.c  ui_img_humidity_png.c  ui_img_light_intensity_png.c  ui_img_position_png.c  ui_img_settings_active_page_png.c  ui_img_spo2_png.c  ui_img_temp_png.c  ui_img_temperature_png.c  ui_img_weather_active_page_png.c  ui_img_weather_code0_sunny_png.c  ui_img_weather_code10_shower_png.c  ui_img_weather_code11_thundershower_png.c  ui_img_weather_code12_thundershower_with_hail_png.c  ui_img_weather_code13_light_rain_png.c  ui_img_weather_code14_moderate_rain_png.c  ui_img_weather_code15_heavy_rain_png.c  ui_img_weather_code16_storm_png.c  ui_img_weather_code17_heavy_storm_png.c  ui_img_weather_code18_severe_storm_png.c  ui_img_weather_code19_ice_rain_png.c  ui_img_weather_code1_clear_png.c  ui_img_weather_code20_sleet_png.c  ui_img_weather_code21_snow_flurry_png.c  ui_img_weather_code22_light_snow_png.c  ui_img_weather_code23_moderate_snow_png.c  ui_img_weather_code24_heavy_snow_png.c  ui_img_weather_code25_snowstorm_png.c  ui_img_weather_code26_dust_png.c  ui_img_weather_code27_sand_png.c  ui_img_weather_code28_duststorm_png.c  ui_img_weather_code29_sandstorm_png.c  ui_img_weather_code30_foggy_png.c  ui_img_weather_code31_haze_png.c  ui_img_weather_code32_windy_png.c  (+12 more)
User/Middlewares/LVGL/GUI_APP/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h
User/Middlewares/Utils/: utils_math.c  utils_math.h
User/PAL/: pal_i2c_interface.c  pal_i2c_interface.h  ring_buffer.c  ring_buffer.h
