SET(SOURCES components/ui_comp_uilabeltime.c
    components/ui_comp.c
    screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    screens/ui_Screen4.c
    screens/ui_Screen5.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_background_image_png.c
    images/ui_img_home_active_page_png.c
    images/ui_img_weather_active_page_png.c
    images/ui_img_heart_rate_active_page_png.c
    images/ui_img_alerts_active_page_png.c
    images/ui_img_settings_active_page_png.c
    images/ui_img_light_intensity_png.c
    images/ui_img_temperature_png.c
    images/ui_img_humidity_png.c
    images/ui_img_heart_rate_png.c
    images/ui_img_spo2_png.c
    images/ui_img_brightness_png.c
    images/ui_img_0_sunny_png.c
    images/ui_img_position_png.c
    images/ui_img_weather_code0_sunny_png.c
    images/ui_img_weather_code10_shower_png.c
    images/ui_img_weather_code11_thundershower_png.c
    images/ui_img_weather_code12_thundershower_with_hail_png.c
    images/ui_img_weather_code13_light_rain_png.c
    images/ui_img_weather_code14_moderate_rain_png.c
    images/ui_img_weather_code15_heavy_rain_png.c
    images/ui_img_weather_code16_storm_png.c
    images/ui_img_weather_code17_heavy_storm_png.c
    images/ui_img_weather_code18_severe_storm_png.c
    images/ui_img_weather_code19_ice_rain_png.c
    images/ui_img_weather_code1_clear_png.c
    images/ui_img_weather_code20_sleet_png.c
    images/ui_img_weather_code21_snow_flurry_png.c
    images/ui_img_weather_code22_light_snow_png.c
    images/ui_img_weather_code23_moderate_snow_png.c
    images/ui_img_weather_code24_heavy_snow_png.c
    images/ui_img_weather_code25_snowstorm_png.c
    images/ui_img_weather_code26_dust_png.c
    images/ui_img_weather_code27_sand_png.c
    images/ui_img_weather_code28_duststorm_png.c
    images/ui_img_weather_code29_sandstorm_png.c
    images/ui_img_weather_code30_foggy_png.c
    images/ui_img_weather_code31_haze_png.c
    images/ui_img_weather_code32_windy_png.c
    images/ui_img_weather_code33_blustery_png.c
    images/ui_img_weather_code34_hurricane_png.c
    images/ui_img_weather_code35_tropical_storm_png.c
    images/ui_img_weather_code36_tornado_png.c
    images/ui_img_weather_code37_cold_png.c
    images/ui_img_weather_code4_cloudy_png.c
    images/ui_img_weather_code5_partly_cloudy_png.c
    images/ui_img_weather_code6_partly_cloudy_png.c
    images/ui_img_weather_code7_mostly_cloudy_png.c
    images/ui_img_weather_code8_mostly_cloudy_png.c
    images/ui_img_weather_code99_unknown_png.c
    images/ui_img_weather_code9_overcast_png.c
    fonts/ui_font_RobotoMonoBold14.c
    fonts/ui_font_RobotoMonoBold16.c
    fonts/ui_font_RobotoMonoBold26.c
    fonts/ui_font_RobotoMonoBold40.c
    fonts/ui_font_SourceHanSansBold16.c
    fonts/ui_font_SourceHanSansBold26.c)

add_library(ui ${SOURCES})
